# Nibbler

./: CMakeLists.txt  Makefile  author  build.sh  install.sh  main.cpp
cmake_modules/: FindSDL2.cmake
game_logic/: AFood.cpp  AFood.hpp  IEntity.hpp  Map.hpp  SimpleFood.cpp  SimpleFood.hpp  Snake.cpp  Snake.hpp
other/: terminal_colors.hpp
src/: CMakeLists.txt  another_main.cpp  main.cpp
src/game_logic/: Block.cpp  Block.hpp  CMakeLists.txt  Dot.cpp  Dot.hpp  Food.cpp  Food.hpp  Game.cpp  Game.hpp  IEntity.hpp  Map.cpp  Map.hpp  Snake.cpp  Snake.hpp  SnakeBodyColor.h
src/graphic/: CMakeLists.txt  IGraphicLibrary.hpp
src/graphic/OpenGL/: CMakeLists.txt  OpenGL.cpp  OpenGL.hpp
src/graphic/SDL/: CMakeLists.txt  Makefile  SDL.cpp  SDL.hpp
src/graphic/SFML/: CMakeLists.txt  Makefile  SFML.cpp  SFML.hpp
src/other/: CMakeLists.txt  DyLibLoad.cpp  DyLibLoad.hpp  terminal_colors.hpp
src/sound/: ISoundLib.hpp
src/sound/sfml_sound/: CMakeLists.txt  SFML_sound.cpp  SFML_sound.hpp
